# slmsuite

./: .gitignore  .readthedocs.yaml  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXECUTIVE_SUMMARY.md  LICENSE  MANIFEST.in  PACKAGE_IMPROVEMENTS.md  README.md  README_PYPI.md  TECHNICAL_IMPLEMENTATION_GUIDE.md  pyproject.toml  pytest.ini  requirements.txt  requirements_docs.txt  requirements_hardware.txt  requirements_ipython.txt  requirements_nohardware.txt  setup.py
.github/workflows/: test.yml
docs/: Makefile  README.md  api.rst  conf.py  examples.rst  installation.rst  requirements.txt  why.rst
docs/_autosummary/: slmsuite.hardware.cameras.alliedvision.AlliedVision.rst  slmsuite.hardware.cameras.alliedvision.rst  slmsuite.hardware.cameras.camera.Camera.rst  slmsuite.hardware.cameras.camera.rst  slmsuite.hardware.cameras.flir.FLIR.rst  slmsuite.hardware.cameras.flir.rst  slmsuite.hardware.cameras.mmcore.MMCore.rst  slmsuite.hardware.cameras.mmcore.rst  slmsuite.hardware.cameras.rst  slmsuite.hardware.cameras.thorlabs.ThorCam.rst  slmsuite.hardware.cameras.thorlabs.configure_tlcam_dll_path.rst  slmsuite.hardware.cameras.thorlabs.rst  slmsuite.hardware.cameras.xenics.Cheetah640.rst  slmsuite.hardware.cameras.xenics.rst  slmsuite.hardware.cameraslms.CameraSLM.rst  slmsuite.hardware.cameraslms.FourierSLM.rst  slmsuite.hardware.cameraslms.NearfieldSLM.rst  slmsuite.hardware.cameraslms.rst  slmsuite.hardware.slms.rst  slmsuite.hardware.slms.santec.Santec.rst  slmsuite.hardware.slms.santec.rst  slmsuite.hardware.slms.screenmirrored.ScreenMirrored.rst  slmsuite.hardware.slms.screenmirrored.rst  slmsuite.hardware.slms.slm.SLM.rst  slmsuite.hardware.slms.slm.rst  slmsuite.holography.algorithms.FeedbackHologram.rst  slmsuite.holography.algorithms.Hologram.rst  slmsuite.holography.algorithms.SpotHologram.rst  slmsuite.holography.algorithms.rst  slmsuite.misc.files.generate_path.rst  slmsuite.misc.files.latest_path.rst  slmsuite.misc.files.read_h5.rst  slmsuite.misc.files.rst  slmsuite.misc.files.write_h5.rst  slmsuite.misc.fitfunctions.cos_fitfun.rst  slmsuite.misc.fitfunctions.lorentzian_fitfun.rst  slmsuite.misc.fitfunctions.lorentzian_jacobian.rst  slmsuite.misc.fitfunctions.rst
docs/source/: api.rst  conf.py  examples.py  examples.rst  faq.rst  index.rst  installation.rst  introduction.rst  tips.rst  why.rst
docs/source/static/css/: custom.css
docs/source/templates/: custom-algorithms-template.rst  custom-class-template.rst  custom-module-template.rst
slmsuite/hardware/: __init__.py  _common.py  _pickle.py  _pyglet.py  _viewer.py  cameraslms.py  remote.py
slmsuite/hardware/cameras/: __init__.py  _mvsdk.py  allied_vision.py  alliedvision.py  basler.py  camera.py  flir.py  imagingsource.py  instrumental.py  mindvision.py  mmcore.py  pylablib.py  remote.py  simulated.py  template.py  thorlabs.py  tis_camera.py  webcam.py  xenics.py
slmsuite/hardware/cameraslms/: __init__.py  _fourier.py  _pixel.py  _settle.py  _wavefront.py  _wavefront_superpixel.py  _wavefront_zernike.py
slmsuite/hardware/slms/: __init__.py  _slm_win.py  _slm_win_memory.py  hamamatsu.py  hamamatsu_slm_class.py  hamamatsu_slm_interpreter.py  holoeye.py  meadowlark.csv  meadowlark.py  meadowlark_calibration.py  remote.py  santec.py  santec_120Hz.py  santec_memory.py  screen_mirrored.py  screenmirrored.py  screenmirroredwx.py  segmented.py  simulated.py  slm.py  template.py  texas_instruments.json  texas_instruments.yaml  texasinstruments.py  thorlabs.py
slmsuite/holography/: __init__.py  algorithms.py  analysis.py  image_analysis.py  lcos_toolbox.py  toolbox.py
slmsuite/holography/algorithms/: __init__.py  _feedback.py  _header.py  _hologram.py  _multiplane.py  _spots.py  _stats.py
slmsuite/holography/analysis/: __init__.py  files.py  fitfunctions.py
slmsuite/holography/toolbox/: __init__.py  cuda.cu  phase.py
slmsuite/holography/toolbox/phase/: __init__.py  _gratings.py  _lenses.py  _misc.py  _structured.py  _zernike.py  cuda.cu
slmsuite/misc/: __init__.py  constants.py  files.py  fitfunctions.py  math.py  typehints.py
testing/hardware/cameras/: alliedvision.py  basler.py
testing/hardware/slms/: benchmark_plm_pipeline.py  test_pyglet.py
tests/: README.md  conftest.py  test_examples.py
tests/hardware/: test_camera.py  test_cameras.py  test_cameraslm.py  test_hardware_init.py  test_init.py  test_pickle.py  test_slm.py  test_slms.py
tests/holography/: test_algorithms.py  test_analysis.py  test_files.py  test_toolbox.py  test_toolbox_phase.py
tests/misc/: test_misc.py
tests/unit/: test_analysis.py  test_camera.py  test_misc.py  test_phase_toolbox.py  test_slm.py
