[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slmsuite"
readme = "README_PYPI.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version", "description", "authors"]
dependencies = [
    "numpy",
    "scipy",
    "opencv-python",
    "matplotlib",
    "h5py",
    "tqdm",
]

[project.optional-dependencies]
ipython = [
    "jupyter",
    "line-profiler",
    "snakeviz",
    "imageio",
    "pygifsicle",
]
cuda11 = [
    "cupy-cuda11x",
]
display = [
    "pyglet",
]

[project.urls]
"Homepage" = "https://github.com/slmsuite/slmsuite"
"Documentation" = "https://slmsuite.readthedocs.io/en/latest/"
