[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slmsuite"
description = "Package for high-performance spatial light modulator (SLM) control and holography."
readme = "README_PYPI.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Holodyne Labs, Inc.", email = "slmsuite@holodyne.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["version"]
dependencies = [
    "numpy",
    "scipy",
    "opencv-python",
    "matplotlib",
    "h5py",
    "tqdm",
]

# GPU acceleration (CuPy): ``pip install slmsuite[gpu]`` installs cupy-cuda13x.
# Sometimes, installation is made complicated by a pre-installed version of CUDA.
# You can find the CUDA version with ``nvcc --version`` in a terminal, and then
# install an installation of :mod:`cupy` specific to CUDA version ``YY`` with
# ``pip install cupy-cudaYYx``(see https://docs.cupy.dev/en/stable/install.html).
# For example:
#   pip install cupy-cuda12x   # CUDA 12.x
#   pip install cupy            # Build from source (any CUDA version)
#
# Some hardware drivers require vendor-specific SDKs that are not available on
# PyPI. Download the SDK installer from the vendor and follow the installation
# instructions. This might involve installing a wheel .whl or building from source.
#
#   PySpin           — FLIR/Teledyne Spinnaker SDK
#   thorlabs_tsi_sdk — Thorlabs ThorCam SDK
#   vmbpy            — Allied Vision Vimba X SDK
#   vimba            — Allied Vision Vimba SDK (legacy)

[project.optional-dependencies]
gpu = ["cupy-cuda13x"]
torch = ["torch"]
slms = [
    "pyglet",
    "hidapi",
]
cameras = [
    "pylablib",
    "pymmcore",
    "pypylon",
    "instrumental-lib",
]
images = [
    "imageio",
    "pygifsicle",
    "scikit-image",
    "av",
]
jupyter = [
    "jupyter",
    "ipywidgets",
    "slmsuite[images]",
]
docs = [
    "nbsphinx",
    "IPython",
    "docutils",
    "sphinx",
    "sphinx_copybutton",
    "sphinx_last_updated_by_git",
    "sphinx_rtd_theme",
    "requests",
    "pandoc",
    "pydata-sphinx-theme",
    "sphinx_design",
    "sphinx-autodoc-typehints",
]
test = [
    "imageio",
    "pytest",
    "pytest-benchmark",
    "pytest-subtests",
    "pytest-notebook",
    "nbformat",
    "imageio",
]
dev = [
    "slmsuite[test]",
    "slmsuite[jupyter]",
    "slmsuite[docs]",
    "slmsuite[gpu]",
    "slmsuite[slms]",
    "slmsuite[cameras]",
    "line-profiler",
    "snakeviz",
]

[project.urls]
"Homepage" = "https://github.com/holodyne/slmsuite"
"Documentation" = "https://slmsuite.readthedocs.io/en/latest/"

[tool.setuptools.dynamic]
version = { attr = "slmsuite.__version__" }

[tool.setuptools.packages.find]
include = ["slmsuite*"]

[tool.setuptools.package-data]
slmsuite = ["holography/toolbox/cuda.cu"]

[tool.uv]
# pyqt5-qt5 >= 5.15.3 dropped Windows wheels; cap to last working version.
constraint-dependencies = ["pyqt5-qt5<=5.15.2"]
